--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+:root {
+    --dark: #000000;
+    --dark-accent: #090909;
+    --light: black;
+    --light-accent: #d6d6d6;
+}
+
 html,body,p,h1,h2,h3 {
     color: white;
     margin: 0;
@@ -26,35 +34,37 @@ html,body,p,h1,h2,h3 {
     color: white;
     background-color: #444444;
     border-radius: 10px;
-    transform: rotate(90deg);
-    text-align: center;
-    height: 300px;
-    width: 150px;
-    position: absolute;
-    top: 0px;
-    left: -175px; 
     z-index: 6;
+    text-align: center;
+    position: fixed;
+    height: 300px;
+    width: 120px;
+    top: 0px;
+    left: -165px; 
+    transform: rotate(90deg);
+    transition: left 0.5s ease-in-out;
+    
 }
 
 #navbar:hover{
-    animation-name: menu-slide;
-    animation-duration: 0.5s;
-    transform:translateX(200px) rotate(90deg);
+    left:-15px;
 }
 
 #wrapper {
     perspective: 1px;
     width:100vw;
     height: 100vh;
-    margin: 0;
+    
     padding: 0;
     overflow-x: hidden;
     overflow-y: auto;
 }
 
 #foreground {
+    margin-left:75px;
     position:absolute;
     transform:translateZ(0);
+    padding-top:25px;
 }
 
 
@@ -64,9 +74,9 @@ html,body,p,h1,h2,h3 {
     width:185vw;
     z-index:-1;
     position:absolute;
-    background: repeating-linear-gradient(45deg,#000000,#000000 40px,#030303 40px,#030303 80px);
+    background: repeating-linear-gradient(45deg,var(--dark),var(--dark) 40px,var(--dark-accent) 40px,var(--dark-accent) 80px);
     animation-name: background-slide;
-    animation-duration: 20s;
+    animation-duration: 15s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
     transform:translateZ(-1px) scale(2);
