--- a/resume.css
+++ b/resume.css
@@ -21,8 +21,8 @@ body {
     --accent: #ffbf00;
     --accent-accent: #ffd65e;
     --link-text: #0000FF;
-    background-color:var(--bg);
-    /* background: repeating-linear-gradient(45deg, var(--bg), var(--bg) 30px, var(--bg-accent) 30px, var(--bg-accent) 60px); */
+    /* background-color:var(--bg); */
+    background: repeating-linear-gradient(45deg, var(--bg), var(--bg) 30px, var(--bg-accent) 30px, var(--bg-accent) 60px);
 }
 
 .sidebar {
