--- a/resume.css
+++ b/resume.css
@@ -22,6 +22,7 @@ body {
     --accent-accent: #ffd65e;
     --link-text: #0000FF;
     /* background-color:var(--bg); */
+    min-height: 100vh;
     background: repeating-linear-gradient(45deg, var(--bg), var(--bg) 30px, var(--bg-accent) 30px, var(--bg-accent) 60px);
 }
 
