--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
     --link-text: #0000FF;
     /* background-color:var(--bg); */
     min-height: 100vh;
-    background: repeating-linear-gradient(45deg, var(--bg), var(--bg) 30px, var(--bg-accent) 30px, var(--bg-accent) 60px);
+    background: var(--bg);
 }
 
 /* Sidebar */
