--- a/V2/styles/styles.css
+++ b/V2/styles/styles.css
@@ -70,8 +70,6 @@ html,body,p,h1,h2,h3 {
     width: 40px;
     height: 100vh;
     position: fixed;
-    border-color: white;
-    border-style: solid;
 }
 
 .main {
@@ -90,7 +88,9 @@ html,body,p,h1,h2,h3 {
 .menuIcons {
     color: var(--icon);
     text-align: center;
+    vertical-align: middle;
     font-size: 30px;
+    transition: font-size 0.1s;
 }
 
 .menu {
@@ -99,11 +99,12 @@ html,body,p,h1,h2,h3 {
     position: absolute;
     top: 0;
     padding: 5px;
+    vertical-align: middle;
 }
 
 button {
     width: 40px;
-    height: 40px;
+    height: 45px;
     margin: auto;
     background: #00000000;
     border: none;
@@ -114,35 +115,52 @@ button {
 }
 
 .darkMode {
-    bottom: 45px;
+    bottom: 50px;
+    text-align: center;
+    vertical-align: middle;
 }
 
 .weatherMenu {
     bottom: 5px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.weatherPopout {
+    position: fixed;
+    bottom: 15px;
+    left: 50px;
+    /* display: none; */
 }
 
 .contactIcons {
     color: var(--icon);
     font-size: 30px;
-    margin-left: 5px;
-    margin-right: 5px;
+    width: 50px;
+    height: 50px;
+    margin: auto;
+    vertical-align: bottom;
+    transition: font-size 0.1s;
+    transition: padding-top 0.1s;
 }
 
 a {
     color: var(--bg);
 }
 
-a:hover {
-    font-size: 35px;
-}
-
 .contact {
     position: relative;
     bottom: 0;
-    width: 250px;
+    width: 300px;
+    height: 100px;
     text-align: center;
     margin: auto;
     padding: 5px;
+    padding-top: 10px;
+}
+
+#discord:hover, #email:hover, #github:hover, #reddit:hover, #youtube:hover, #darkModeButton:hover, #weatherButton:hover {
+    font-size: 35px;
 }
 
 ::-webkit-scrollbar {
@@ -164,6 +182,8 @@ a:hover {
 ::-webkit-scrollbar-thumb:hover {
     background: var(--scroll-hover);
 }
+
+
 
 @media screen and (max-width: 700px) {
     .sidebar {
